Attribuer un id a la pp

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <p class="profession">Mobile and Web Developer</p>
     <a href="#contact" class="btn">Contact</a>
    </div>
-   <img src="img/IMG.jpg" alt="" class="image">
+   <img src="img/IMG.jpg" alt="" class="image" id="pp">
   </section>
 
   <script src="app.js"></script>
